# superedit

./: .env  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: package.json  vite.config.ts
apps/web/src/: MyVideo.tsx  main.tsx  styles.css
apps/web/src/components/: FileUpload.tsx  MediaClips.tsx
apps/web/src/services/: geminiService.ts
apps/web/src/store/: irStore.ts  mediaStore.ts
src/: App.tsx
src/components/: Preview.tsx  Timeline.tsx
src/store/: editorStore.ts
supabase/: config.toml
supabase/migrations/: 20250605061154_init-db.sql
superedit/: main.py
